@@ -23,3 +23,10 @@ do uzupełnienia
 2020-11-25
 1. UNIT_TESTS ProductCategory: update_category_fields - dokonczone testowe make_root() (patchowana tylko metoda save() ktorej testowac nie trzeba)
 2. UNIT_TESTS ProductCategory: post_save_product_category signal called methods order
+
+2020-11-26
+1. UNIT_TESTS ProductCategory: test_update_products_after_making_category_root_works_correctly
+2. UNIT_TESTS ProductCategory: test_update_products_after_category_attr_changes_works_correctly
+3. UNIT_TESTS ProductCategory: test_update_subcategories_after_category_attr_changes_works_correctly
+4. UNIT_TESTS ProductCategory: test_merge_attributes_ols_json_works_correctly
+5. UNIT_TESTS ProductCategory: test_post_delete_product_category_signal_called_methods_order
